v1.1.0/modules/schema/pages/class/WindPlantFreqPcontrolIEC.adoc
= `WindPlantFreqPcontrolIEC`
:toclevels: 4


+++Frequency and active power controller model.
Reference: IEC 61400-27-1:2015, Annex D.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindPlantFreqPcontrolIEC`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`WindPlantFreqPcontrolIEC`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<WindDynamicsLookupTable,`WindDynamicsLookupTable`>>
//| [[slots_table.WindDynamicsLookupTable]]<<WindDynamicsLookupTable,`WindDynamicsLookupTable`>>
| 1..* +
xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]
| +++The wind dynamics lookup table associated with this frequency and active power wind plant model.+++
| _n/a_

| <<WindPlantIEC,`WindPlantIEC`>>
//| [[slots_table.WindPlantIEC]]<<WindPlantIEC,`WindPlantIEC`>>
| 1 +
xref::class/WindPlantIEC.adoc[`WindPlantIEC`]
| +++Wind plant model with which this wind plant frequency and active power control is associated.+++
| _n/a_

| <<dprefmax,`dprefmax`>>
//| [[slots_table.dprefmax]]<<dprefmax,`dprefmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum ramp rate of <i>p</i><i><sub>WTref</sub></i> request from the plant controller to the wind turbines...+++
| _n/a_

| <<dprefmin,`dprefmin`>>
//| [[slots_table.dprefmin]]<<dprefmin,`dprefmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum (negative) ramp rate of <i>p</i><i><sub>WTref</sub></i> request from the plant controller to the wind turbines...+++
| _n/a_

| <<dpwprefmax,`dpwprefmax`>>
//| [[slots_table.dpwprefmax]]<<dpwprefmax,`dpwprefmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum positive ramp rate for wind plant power reference (<i>dp</i><i><sub>WPrefmax</sub></i>) (&gt;...+++
| _n/a_

| <<dpwprefmin,`dpwprefmin`>>
//| [[slots_table.dpwprefmin]]<<dpwprefmin,`dpwprefmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum negative ramp rate for wind plant power reference (<i>dp</i><i><sub>WPrefmin</sub></i>) (&lt;...+++
| _n/a_

| <<kiwpp,`kiwpp`>>
//| [[slots_table.kiwpp]]<<kiwpp,`kiwpp`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Plant P controller integral gain (<i>K</i><i><sub>IWPp</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<kiwppmax,`kiwppmax`>>
//| [[slots_table.kiwppmax]]<<kiwppmax,`kiwppmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum PI integrator term (<i>K</i><i><sub>IWPpmax</sub></i>) (&gt; WindPlantFreqPcontrolIEC.kiwppmin). It is a...+++
| _n/a_

| <<kiwppmin,`kiwppmin`>>
//| [[slots_table.kiwppmin]]<<kiwppmin,`kiwppmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum PI integrator term (<i>K</i><i><sub>IWPpmin</sub></i>) (&lt; WindPlantFreqPcontrolIEC.kiwppmax). It is a...+++
| _n/a_

| <<kpwpp,`kpwpp`>>
//| [[slots_table.kpwpp]]<<kpwpp,`kpwpp`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Plant P controller proportional gain (<i>K</i><i><sub>PWPp</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<kwppref,`kwppref`>>
//| [[slots_table.kwppref]]<<kwppref,`kwppref`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power reference gain (<i>K</i><i><sub>WPpref</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<prefmax,`prefmax`>>
//| [[slots_table.prefmax]]<<prefmax,`prefmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum <i>p</i><i><sub>WTref</sub></i> request from the plant controller to the wind turbines...+++
| _n/a_

| <<prefmin,`prefmin`>>
//| [[slots_table.prefmin]]<<prefmin,`prefmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum <i>p</i><i><sub>WTref</sub></i> request from the plant controller to the wind turbines...+++
| _n/a_

| <<tpft,`tpft`>>
//| [[slots_table.tpft]]<<tpft,`tpft`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Lead time constant in reference value transfer function (<i>T</i><i><sub>pft</sub></i>) (&gt;= 0). It is a project-dependent...+++
| _n/a_

| <<tpfv,`tpfv`>>
//| [[slots_table.tpfv]]<<tpfv,`tpfv`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Lag time constant in reference value transfer function (<i>T</i><i><sub>pfv</sub></i>) (&gt;= 0). It is a project-dependent...+++
| _n/a_

| <<twpffiltp,`twpffiltp`>>
//| [[slots_table.twpffiltp]]<<twpffiltp,`twpffiltp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for frequency measurement (<i>T</i><i><sub>WPffiltp</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++
| _n/a_

| <<twppfiltp,`twppfiltp`>>
//| [[slots_table.twppfiltp]]<<twppfiltp,`twppfiltp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for active power measurement (<i>T</i><i><sub>WPpfiltp</sub></i>) (&gt;= 0). It is a project-dependent...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dprefmax]
=== `dprefmax`
+++Maximum ramp rate of <i>p</i><i><sub>WTref</sub></i> request from the plant controller to the wind turbines (<i>dp</i><i><sub>refmax</sub></i>) (&gt; WindPlantFreqPcontrolIEC.dprefmin). It is a case-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.dprefmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dprefmax,&#10548;>>
--
////


//[discrete]
[#dprefmin]
=== `dprefmin`
+++Minimum (negative) ramp rate of <i>p</i><i><sub>WTref</sub></i> request from the plant controller to the wind turbines (<i>dp</i><i><sub>refmin</sub></i>) (&lt; WindPlantFreqPcontrolIEC.dprefmax). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.dprefmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dprefmin,&#10548;>>
--
////


//[discrete]
[#dpwprefmax]
=== `dpwprefmax`
+++Maximum positive ramp rate for wind plant power reference (<i>dp</i><i><sub>WPrefmax</sub></i>) (&gt; WindPlantFreqPcontrolIEC.dpwprefmin). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.dpwprefmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dpwprefmax,&#10548;>>
--
////


//[discrete]
[#dpwprefmin]
=== `dpwprefmin`
+++Maximum negative ramp rate for wind plant power reference (<i>dp</i><i><sub>WPrefmin</sub></i>) (&lt; WindPlantFreqPcontrolIEC.dpwprefmax). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.dpwprefmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dpwprefmin,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kiwpp]
=== `kiwpp`
+++Plant P controller integral gain (<i>K</i><i><sub>IWPp</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.kiwpp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.kiwpp,&#10548;>>
--
////


//[discrete]
[#kiwppmax]
=== `kiwppmax`
+++Maximum PI integrator term (<i>K</i><i><sub>IWPpmax</sub></i>) (&gt; WindPlantFreqPcontrolIEC.kiwppmin). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.kiwppmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kiwppmax,&#10548;>>
--
////


//[discrete]
[#kiwppmin]
=== `kiwppmin`
+++Minimum PI integrator term (<i>K</i><i><sub>IWPpmin</sub></i>) (&lt; WindPlantFreqPcontrolIEC.kiwppmax). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.kiwppmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kiwppmin,&#10548;>>
--
////


//[discrete]
[#kpwpp]
=== `kpwpp`
+++Plant P controller proportional gain (<i>K</i><i><sub>PWPp</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.kpwpp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.kpwpp,&#10548;>>
--
////


//[discrete]
[#kwppref]
=== `kwppref`
+++Power reference gain (<i>K</i><i><sub>WPpref</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.kwppref`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kwppref,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#prefmax]
=== `prefmax`
+++Maximum <i>p</i><i><sub>WTref</sub></i> request from the plant controller to the wind turbines (<i>p</i><i><sub>refmax</sub></i>) (&gt; WindPlantFreqPcontrolIEC.prefmin). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.prefmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.prefmax,&#10548;>>
--
////


//[discrete]
[#prefmin]
=== `prefmin`
+++Minimum <i>p</i><i><sub>WTref</sub></i> request from the plant controller to the wind turbines (<i>p</i><i><sub>refmin</sub></i>) (&lt; WindPlantFreqPcontrolIEC.prefmax). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.prefmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.prefmin,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tpft]
=== `tpft`
+++Lead time constant in reference value transfer function (<i>T</i><i><sub>pft</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.tpft`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tpft,&#10548;>>
--
////


//[discrete]
[#tpfv]
=== `tpfv`
+++Lag time constant in reference value transfer function (<i>T</i><i><sub>pfv</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.tpfv`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tpfv,&#10548;>>
--
////


//[discrete]
[#twpffiltp]
=== `twpffiltp`
+++Filter time constant for frequency measurement (<i>T</i><i><sub>WPffiltp</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.twpffiltp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.twpffiltp,&#10548;>>
--
////


//[discrete]
[#twppfiltp]
=== `twppfiltp`
+++Filter time constant for active power measurement (<i>T</i><i><sub>WPpfiltp</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.twppfiltp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.twppfiltp,&#10548;>>
--
////


//[discrete]
[#WindDynamicsLookupTable]
=== `WindDynamicsLookupTable`
+++The wind dynamics lookup table associated with this frequency and active power wind plant model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.WindDynamicsLookupTable`
| Cardinality
| 1..*
| Type
| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]


|===

////
[.text-left]
--
<<slots_table.WindDynamicsLookupTable,&#10548;>>
--
////


//[discrete]
[#WindPlantIEC]
=== `WindPlantIEC`
+++Wind plant model with which this wind plant frequency and active power control is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantFreqPcontrolIEC.WindPlantIEC`
| Cardinality
| 1
| Type
| xref::class/WindPlantIEC.adoc[`WindPlantIEC`]


|===

////
[.text-left]
--
<<slots_table.WindPlantIEC,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`] | xref::class/WindDynamicsLookupTable.adoc#WindPlantFreqPcontrolIEC[`WindPlantFreqPcontrolIEC`]



| xref::class/WindPlantIEC.adoc[`WindPlantIEC`] | xref::class/WindPlantIEC.adoc#WindPlantFreqPcontrolIEC[`WindPlantFreqPcontrolIEC`]


|===

